2001-09-09  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/scopeable/.cvsignore: added Setup

2001-09-08  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/ConfigAdditives.py: now refer to scopeable, not scope, 
	for imported ScopeMatchers.

	* SkunkWeb/SkunkWeb/Hooks.py (KeyedHook.__call__): removed the nasty
	debugging statements and import hacks from this often used function.

	* pylibs/scopeable/_scope.c: various modifications, one would hope 
	improvements, to reference counting.

2001-09-07  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in, SkunkWeb/Services/httpd/__init__.py, 
	SkunkWeb/Services/httpd/protocol.py: improved handling of SERVER_NAME; 
	added ServerName configuration variable

2001-09-06  Drew Csillag  <drew@starmedia.net>

        * pylibs/PyDO/doc: documentation of |port thing
	
	* docs/PyDO/PyDO.tex: documentation of |port thing

	* pylibs/PyDO/pgenscript.py: enhancements by Greg Brauer and
	now supports |port feature

	* pylibs/PostgreSql/__init__.py:  added |port feature to connect
	string

	* configure, configure.in, SkunkWeb/configure, SkunkWeb/configure.in:
	added stuff for fcgiprot

	* docs/opman/opman.tex: added stuff for FastCGI

	* SkunkWeb/Services/fcgiprot.py: added FastCGI handler

	* pylibs/fcgi.py: added
	
2001-09-05  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/skunklib/Setup.in: cause Drew's C extensions to actually be built.
	
2001-09-04  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/web/protocol.py (_processRequest): no actual change, 
	but marked where one might call Configuration.saveMash().  I'm not sure
	I like the saveMash() feature.

	* pylibs/scope.py: added deprecation comment.

	* pylibs/Makefile.in (py_comps): added scopeable to Makefile.in.

	* pylibs/ConfigLoader.py: altered to use new scopeable package;
	removed code that has been commented out for months.

	* pylibs/scopeable/__init__.py: added "scopeable" package, 